--- a/css/master.css
+++ b/css/master.css
@@ -1,36 +1,1 @@
-@media screen and (min-width: 408px) {
-  body {
-    background-color: purple;
-  }
-}
-body {
-  font: "Arial", "Helvetica", sans-serif;
-  font-size: 16px;
-  background-color: salmon;
-  margin: 0;
-  border: 0;
-}
-
-nav {
-  margin: 0;
-}
-nav li {
-  display: inline-block;
-  margin: 0 10px;
-}
-nav li a {
-  cursor: pointer;
-  text-decoration: none;
-}
-nav :hover a {
-  color: cyan;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  background-color: black;
-  color: white;
-}
-
-/*# sourceMappingURL=master.css.map */
+@media screen and (min-width: 408px){body{background-color:purple}}body{font:"Arial","Helvetica",sans-serif;font-size:16px;background-color:salmon;margin:0;border:0}.box{width:30px;height:30px;border-radius:20px}.box2{width:30px;height:30px;border-radius:50%}nav{margin:0}nav .nav-item{display:inline-block;margin:0 10px;background-color:beige;border-radius:8px;padding:0 5px 8px 0}nav .nav-item a{cursor:pointer;text-decoration:none}nav :hover a{color:pink}footer{position:fixed;bottom:0;background-color:#000;color:#fff}/*# sourceMappingURL=master.css.map */
