--- a/sass/modules/_main.scss
+++ b/sass/modules/_main.scss
@@ -1,8 +1,23 @@
 //main rules go here
+//This is a comment
 body {
     font: $main-font;
     font-size: $main-font-size;
     background-color: $main-bg-color;
     margin: 0;
     border: 0;
+}
+
+.box {
+    width: 30px;
+    height: 30px;
+
+    @include roundCorners(20px);
+}
+
+.box2 {
+    width: 30px;
+    height: 30px;
+
+    @include roundCorners(50%);
 }
