--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -1,12 +1,16 @@
 nav {
     margin: 0;
-    li {
+    .nav-item {
         display: inline-block; margin: 0 10px;
-        
-        a{cursor: pointer; text-decoration: none;}
+        background-color: beige;
+
+        @include roundCorners(8px);
+        @include addPadding(0 5px 8px 0);
+
+        a {cursor: pointer; text-decoration: none;}
     }
     :hover {
-        a{color:cyan;}
+        a{color:pink;}
     }
 }
 
