--- a/sass/modules/_nav.scss
+++ b/sass/modules/_nav.scss
@@ -2,12 +2,12 @@ nav {
     margin: 0;
     .nav-item {
         display: inline-block; margin: 0 10px;
-        background-color: beige;
+        background-color: cyan;
 
         @include roundCorners(8px);
-        @include addPadding(0 5px 8px 0);
+        @include addPadding(5px 12px);
 
-        a {cursor: pointer; text-decoration: none;}
+        a {cursor: pointer; text-decoration: none; color:white;}
     }
     :hover {
         a{color:pink;}
